src/Domain/Compiler/Tests/Declaration/VariableDeclaration/__Baselines__/Coercion_32ToS16-StashIr.error
error: Integral type 's32' does not fit into integral type 's16'.
--> main.hs:8:8
  | 
8 | return a;}}§§§§нннннннн
  |        ^
